<?xml version="1.0"?>
<package format="3">
  <name>bspline_opt</name>
  <version>0.0.0</version>
  <description>bspline_opt</description>
  <maintainer email="todo@example.com">FUEL Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>active_perception</depend>
  <depend>cv_bridge</depend>
  <depend>fuel_ros2_compat</depend>
  <depend>plan_env</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
