<?xml version="1.0"?>
<package format="3">
  <name>plan_manage</name>
  <version>0.0.0</version>
  <description>plan_manage</description>
  <maintainer email="todo@example.com">FUEL Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>active_perception</depend>
  <depend>bspline</depend>
  <depend>bspline_opt</depend>
  <depend>cv_bridge</depend>
  <depend>fuel_ros2_compat</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>path_searching</depend>
  <depend>pcl_conversions</depend>
  <depend>plan_env</depend>
  <depend>poly_traj</depend>
  <depend>quadrotor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>traj_utils</depend>
  <depend>visualization_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
