<?xml version="1.0"?>
<package format="3">
  <name>traj_utils</name>
  <version>0.0.0</version>
  <description>traj_utils</description>
  <maintainer email="todo@example.com">FUEL Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>bspline</depend>
  <depend>bspline_opt</depend>
  <depend>cv_bridge</depend>
  <depend>fuel_ros2_compat</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>path_searching</depend>
  <depend>pcl_conversions</depend>
  <depend>poly_traj</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
