<?xml version="1.0"?>
<package format="3">
  <name>fuel_ros2_compat</name>
  <version>0.0.0</version>
  <description>ROS1-style C++ compatibility headers backed by ROS2 Humble APIs for the FUEL migration.</description>
  <maintainer email="todo@example.com">FUEL Maintainers</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
