<?xml version="1.0"?>
<package format="3">
  <name>local_sensing_node</name>
  <version>0.0.0</version>
  <description>local_sensing_node</description>
  <maintainer email="todo@example.com">FUEL Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>cv_bridge</depend>
  <depend>fuel_ros2_compat</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>quadrotor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
