<?xml version="1.0"?>
<package format="3">
  <name>poscmd_2_odom</name>
  <version>0.0.0</version>
  <description>poscmd_2_odom</description>
  <maintainer email="todo@example.com">FUEL Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>fuel_ros2_compat</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>rclcpp</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
