<?xml version="1.0"?>
<package format="3">
  <name>so3_control</name>
  <version>0.0.0</version>
  <description>SO3 quadrotor controller component and standalone node.</description>
  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>fuel_ros2_compat</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
