<?xml version="1.0"?>
<package format="3">
  <name>so3_disturbance_generator</name>
  <version>0.0.0</version>
  <description>so3_disturbance_generator</description>
  <maintainer email="todo@example.com">FUEL Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>fuel_ros2_compat</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pose_utils</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
