<?xml version="1.0"?>
<package format="3">
  <name>so3_quadrotor_simulator</name>
  <version>0.0.0</version>
  <description>so3_quadrotor_simulator</description>
  <maintainer email="todo@example.com">FUEL Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>fuel_ros2_compat</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>uav_utils</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
